# BoardGameAss

./: BoardGame_Classes.h  CMakeLists.txt  Four_in_a_Row.h  Game3.h  Game6.cpp  Misere Tic Tac Toe.cpp  Numerical_TicTacToe.h  PyramidXO.h  README.md  UltimateTicTacToe.h  WordXO.h  main.cpp  sus.h
PyramidXOTest/: BoardGame_Classes.h  CMakeLists.txt  TheGame.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  starterwindow.cpp  starterwindow.h  starterwindow.ui
SUS/: BoardGame_Classes.h  CMakeLists.txt  CMakeLists.txt.user.2fe7aeb  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerselector.cpp  playerselector.h  playerselector.ui  readme.txt  sus.cpp  sus.h
UltimateTicTacToe/: BoardGame_Classes.h  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerselector.cpp  playerselector.h  playerselector.ui  readme.txt  ultimatetictactoegame.h
